welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: identifier expected but 'new' found.
  var T : new Array(Color)(i);
          ^Array1:5: error: '<-' expected but ')' found.
  for (j <= 0 to T.length - 1) {
                             ^Array1:21: error: illegal start of simple expression
} 
^